--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,13 @@
 theme: jekyll-theme-minimal
 title: Octocat's homepage
 description: Bookmark this to keep an eye on my project updates!
+lsi: false
+safe: true
+source: 'posts'
+incremental: false
+highlighter: rouge
+gist:
+  noscript: false
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
