--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Code Craft
+email: info@softmart.au
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Welcome to CodeCraft Node, a personal odyssey through the realms of Node.js. Join me on this coding adventure, where we delve into the nuances of Node.js with insightful guides, personal reflections, and shared discoveries. Together, let's weave a personal narrative in the ever-evolving tapestry of technology.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: trtin
+github_username:  trtin
 
 # Build settings
 theme: minima
